[package]
edition = "2021"
name = "cleo-cli"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "cleo"

[dependencies]
aws-config = "0.52.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.4", default-features = false, features = ["napi4"] }
napi-derive = "2.9.3"
walkdir = "2.3.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
